# wawa-kanban

./: .dockerignore  .gitignore  .sesskey  Dockerfile  README.md  app.py  claude.md  config.py  design.md  docker-entrypoint.sh  install.sh  package-lock.json  package.json  publish.sh  pyproject.toml  uno.config.ts  uno.css
.cursor/rules/: no-inline-style.mdc
agents/code-verifier/: AGENTS.md  AGENTS.md.j2  HEARTBEAT.md  HEARTBEAT.md.j2  IDENTITY.md  IDENTITY.md.j2  SOUL.md  agent.json.j2
agents/designer/: AGENTS.md  HEARTBEAT.md.j2  IDENTITY.md.j2  SOUL.md.j2  agent.json.j2
agents/developer/: AGENTS.md  AGENTS.md.j2  HEARTBEAT.md  HEARTBEAT.md.j2  IDENTITY.md  IDENTITY.md.j2  PROJECTS.md.j2  SOUL.md  SOUL.md.j2  TICKETS.md.j2  TOOLS.md  TOOLS.md.j2  agent.json.j2
agents/general-verifier/: AGENTS.md  AGENTS.md.j2  HEARTBEAT.md  HEARTBEAT.md.j2  IDENTITY.md  IDENTITY.md.j2  SOUL.md  SOUL.md.j2
agents/info-officer/: AGENTS.md.j2  HEARTBEAT.md.j2  IDENTITY.md.j2  (+3 more)
cli/: wkanban  wkanban.sh
docs/: design.md
fixtures/: README.md
js/: refresh-and-modal.js
scripts/: build-css.mjs
static/: kanban.css  temp.html  temp2.html
tests/: conftest.py  test_board_columns.py  test_openclaw_agents_ops.py  test_openclaw_fixture_agent_roundtrip.py  test_openclaw_sync.py  test_openclaw_uninstall_analyze.py  test_tickets_task_modes.py  test_wawa_cli.py
wawa_cli/: __init__.py  __main__.py  agent_commands.py  main.py  project_commands.py  ticket_commands.py  todo_commands.py  workspace_paths.py
wawa_openclaw/: __init__.py  agents_ops.py  cli.py  config_io.py  paths.py
(+83 files in other folders)
