[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "wawa-kanban"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-fasthtml>=0.12.48",
    "markdown>=3.5",
    "uvicorn[standard]>=0.30.0",
    "json5>=0.13.0",
]

[project.scripts]
openclaw-agent-add = "wawa_openclaw.cli:main_add"
openclaw-agent-remove = "wawa_openclaw.cli:main_remove"

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27.0", "playwright==1.49.1", "uvicorn>=0.30.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["wawa_openclaw"]
